--- a/HTML/register.html
+++ b/HTML/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webshop | Login</title>
     <link rel="stylesheet" href="../CSS/login.css" />
-    <script src="../JS/login-page.js"></script>
+    <script src="../JS/searchbar.js"></script>
     
   </head>
 
