--- a/HTML/tablets.html
+++ b/HTML/tablets.html
@@ -13,7 +13,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
-
+    <script src="../JS/searchbar.js"></script>
   <body>
     <header>
       <nav>
@@ -54,9 +54,23 @@
           <div class="searchBox">
             <input id="search" onkeyup="search_item()" type="text" placeholder="Search.." />
             <ol id='list'>
-              <li class="searchItem">ABC</li>
-              <li class="searchItem">123</li>
-              <li class="searchItem">Wifi Pineapple Mark VII</li>
+              <li class="searchItem"><a class="sublink_item_search" href="phones.html#phone1">Apple IPhone 13</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="phones.html#phone2">Apple IPhone 14</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="phones.html#phone3">Google Pixel 7</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="phones.html#phone4">Samsung S23</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="phones.html#phone5">Samsung S23 Ultra</a></li>
+
+              <li class="searchItem"><a class="sublink_item_search" href="tablets.html#tablet1">Apple IPad Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="tablets.html#tablet2">Apple IPad Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="tablets.html#tablet3">Remarkable 2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="tablets.html#tablet4">Samsung Galaxy Tab S8</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="tablets.html#tablet5">Huawei Mate Pad Pro</a></li>
+
+              <li class="searchItem"><a class="sublink_item_search" href="laptops.html#laptop1">Apple Macbook Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="laptops.html#laptop2">Apple Macbook Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="laptops.html">Framework 13"</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="laptops.html#laptop3">XMG Fusion 15</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="laptops.html#laptop5">Dell XPS 15</a></li>
             </ol>
           </div>
 
