--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
               <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone4">Samsung S23</a></li>
               <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone5">Samsung S23 Ultra</a></li>
 
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone1">Apple IPad Pro M2</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone2">Apple IPad Air M2</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Remarkable 2</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone4">Samsung Galaxy Tab S8</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone5">Huawei Mate Pad Pro</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/tablets.html#tablet1">Apple IPad Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/tablets.html#tablet2">Apple IPad Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/tablets.html#tablet3">Remarkable 2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/tablets.html#tablet4">Samsung Galaxy Tab S8</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/tablets.html#tablet5">Huawei Mate Pad Pro</a></li>
 
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone1">Apple Macbook Pro M2</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone2">Apple Macbook Air M2</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone3">Framework 13"</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone4">XMG Fusion 15</a></li>
-              <li class="searchItem"><a class="sublink_item_search" href="HTML/phones.html#phone5">Dell XPS 15</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop1">Apple Macbook Pro M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop2">Apple Macbook Air M2</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#phone3">Framework 13"</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop3">XMG Fusion 15</a></li>
+              <li class="searchItem"><a class="sublink_item_search" href="HTML/laptops.html#laptop5">Dell XPS 15</a></li>
             </ol>
           </div>
 
